feat(openapi): update OpenAPI specs for list products endpoint and create api handler exception class
