# src/main/java/com/banreservas/product/controller/ProductController.java
@@ -3,6 +3,7 @@ package com.banreservas.product.controller;
 import com.banreservas.openapi.models.ProductRequestDto;
 import com.banreservas.openapi.models.ProductResponseDto;
 import com.banreservas.product.constant.Endpoint;
+import com.banreservas.product.exception.ProductNotFoundException;
 import com.banreservas.product.mapper.ProductDtoMapper;
 import com.banreservas.product.service.ProductService;
 import lombok.RequiredArgsConstructor;
@@ -12,6 +13,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 @Slf4j
@@ -23,8 +25,8 @@ public class ProductController implements com.banreservas.openapi.controllers.Pr
     private final ProductService productService;
 
     @Override
-    public Mono<ResponseEntity<ProductResponseDto>> getProduct(String id, String currency, ServerWebExchange exchange) {
-        throw new UnsupportedOperationException("Not implemented yet.");
+    public Mono<ResponseEntity<Flux<ProductResponseDto>>> listProducts(String currency, ServerWebExchange exchange) {
+        throw new ProductNotFoundException("0");
     }
 
     @Override
@@ -39,12 +41,17 @@ public class ProductController implements com.banreservas.openapi.controllers.Pr
     }
 
     @Override
+    public Mono<ResponseEntity<ProductResponseDto>> getProduct(String id, String currency, ServerWebExchange exchange) {
+        throw new ProductNotFoundException(id);
+    }
+
+    @Override
     public Mono<ResponseEntity<ProductResponseDto>> updateProduct(String id, Mono<ProductRequestDto> productRequestDto, ServerWebExchange exchange) {
-        throw new UnsupportedOperationException("Not implemented yet.");
+        throw new ProductNotFoundException(id);
     }
 
     @Override
     public Mono<ResponseEntity<Void>> deleteProduct(String id, ServerWebExchange exchange) {
-        throw new UnsupportedOperationException("Not implemented yet.");
+        throw new ProductNotFoundException(id);
     }
 }
