# src/main/resources/openapi/openapi.yml
@@ -9,6 +9,27 @@ servers:
 
 paths:
   /products:
+    get:
+      summary: List all products
+      operationId: listProducts
+      tags:
+        - Products
+      parameters:
+        - in: query
+          name: currency
+          schema:
+            type: string
+          required: false
+          description: Currency code to convert product price (example DOP, EUR, USD)
+      responses:
+        '200':
+          description: List of products retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProductResponse'
     post:
       summary: Create a new product
       operationId: createProduct
@@ -55,7 +76,7 @@ paths:
           schema:
             type: string
           required: false
-          description: Currency code to convert product price (example, DOP, EUR, USD)
+          description: Currency code to convert product price (example DOP, EUR, USD)
       responses:
         '200':
           description: Product retrieved successfully
